--- a/css/blog.css
+++ b/css/blog.css
@@ -4,7 +4,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display: block; }
 
-body { line-height: 1; }
+body { line-height: 1; font-family: "Roboto Condensed", Arial, sans-serif; color: #666; }
 
 ol, ul { list-style: none; }
 
@@ -13,5 +13,31 @@ blockquote, q { quotes: none; }
 blockquote:before, blockquote:after, q:before, q:after { content: ""; content: none; }
 
 table { border-collapse: collapse; border-spacing: 0; }
+
+.container-fluid { padding: 0; margin: 0; }
+
+a { color: #495a86; }
+a:hover, a:active, a:active:hover, a:active:focus, a:focus, a:visited { text-decoration: none; }
+
+header { margin-top: 20px; }
+header .logo { padding-left: 0; padding-top: 10px; padding-right: 20px; }
+header .logo img { width: 90%; }
+header .ad { padding: 0; }
+header .ad a { width: 100%; float: right; max-width: 728px; max-height: 90px; }
+header .ad img { width: 100%; float: right; }
+header nav { margin-top: 20px; border-top: 1px solid #495a86; border-bottom: 3px solid #495a86; }
+header nav ul { text-align: center; }
+header nav ul li { display: inline-block; text-transform: uppercase; text-align: center; }
+header nav ul li:hover { background-color: #495a86; }
+header nav ul li:hover a { color: #fff; }
+header nav ul li a { width: 100%; height: 100%; padding: 14px 18px; display: block; }
+header .featured { background-color: #f6f6f6; }
+header .featured p { width: 130px; float: left; margin-left: 20px; color: #b1b6c9; text-transform: uppercase; padding: 10px 0; background-image: url("../images/arrow-right.png"); background-repeat: no-repeat; background-position-x: 105px; background-position-y: 10px; }
+header .featured ul { width: 750px; float: left; }
+header .featured ul li { font-size: 0.8em; width: 100%; padding: 10px 0; }
+header .featured ul li a { color: #337ab7; width: 100%; height: 100%; display: block; }
+header .featured .button-prev, header .featured .button-next { width: 14px; height: 14px; float: right; cursor: pointer; margin: 0 2px; padding: 14px 0; background-position-y: 10px; background-repeat: no-repeat; }
+header .featured .button-prev { background-image: url("../images/arrow-left.png"); }
+header .featured .button-next { background-image: url("../images/arrow-right.png"); }
 
 /*# sourceMappingURL=blog.css.map */
