--- a/css/blog.css
+++ b/css/blog.css
@@ -36,8 +36,24 @@ header .featured p { width: 130px; float: left; margin-left: 20px; color: #b1b6c
 header .featured ul { width: 750px; float: left; }
 header .featured ul li { font-size: 0.8em; width: 100%; padding: 10px 0; }
 header .featured ul li a { color: #337ab7; width: 100%; height: 100%; display: block; }
-header .featured .button-prev, header .featured .button-next { width: 14px; height: 14px; float: right; cursor: pointer; margin: 0 2px; padding: 14px 0; background-position-y: 10px; background-repeat: no-repeat; }
-header .featured .button-prev { background-image: url("../images/arrow-left.png"); }
-header .featured .button-next { background-image: url("../images/arrow-right.png"); }
+header .featured .buttons { float: right; }
+header .featured .buttons .prev, header .featured .buttons .next { width: 14px; height: 14px; float: left; cursor: pointer; margin: 0 2px; padding: 14px 0; background-position-y: 10px; background-repeat: no-repeat; }
+header .featured .buttons .prev { background-image: url("../images/arrow-left.png"); }
+header .featured .buttons .next { background-image: url("../images/arrow-right.png"); }
+
+.highlights { margin: 25px 0; height: 300px; background-image: url("../images/bg-highlights.jpg"); }
+.highlights .container { height: 100%; overflow: hidden; }
+.highlights .container .slide { position: relative; background-color: #b1b6c9; padding: 0; height: 100%; overflow: hidden; font-weight: 700; }
+.highlights .container .slide ul { height: 100%; }
+.highlights .container .slide ul li { max-width: 100%; height: 100%; position: relative; }
+.highlights .container .slide ul li a { color: #fff; }
+.highlights .container .slide ul li a img { min-height: 100%; width: 100%; max-height: 100%; }
+.highlights .container .slide ul li a .details { position: absolute; bottom: 30px; left: 30px; }
+.highlights .container .slide ul li a .edition { background-color: #495a86; max-width: 90px; padding: 5px 10px; }
+.highlights .container .slide ul li a h1 { text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.7); max-width: 300px; margin-top: 10px; font-size: 1.6em; }
+.highlights .container .slide .buttons { position: absolute; bottom: 20px; right: 20px; padding: 10px 5px; background-color: #f6f6f6; }
+.highlights .container .slide .buttons .prev, .highlights .container .slide .buttons .next { width: 14px; height: 14px; float: left; cursor: pointer; margin: 0 2px; background-repeat: no-repeat; }
+.highlights .container .slide .buttons .prev { background-image: url("../images/arrow-left.png"); }
+.highlights .container .slide .buttons .next { background-image: url("../images/arrow-right.png"); }
 
 /*# sourceMappingURL=blog.css.map */
