--- a/sass/_partials/_header.sass
+++ b/sass/_partials/_header.sass
@@ -88,22 +88,25 @@ header
           height: 100%
           display: block
 
-    .button-prev,
-    .button-next
-      width: 14px
-      height: 14px
+    .buttons
       float: right
-      cursor: pointer
-      margin: 0 2px
-      padding: 14px 0
-      background:
-        position-y: 10px
-        repeat: no-repeat
 
-    .button-prev
-      background:
-        image: url("../images/arrow-left.png")
+      .prev,
+      .next
+        width: 14px
+        height: 14px
+        float: left
+        cursor: pointer
+        margin: 0 2px
+        padding: 14px 0
+        background:
+          position-y: 10px
+          repeat: no-repeat
 
-    .button-next
-      background:
-        image: url("../images/arrow-right.png")
+      .prev
+        background:
+          image: url("../images/arrow-left.png")
+
+      .next
+        background:
+          image: url("../images/arrow-right.png")
