--- a/sass/blog.sass
+++ b/sass/blog.sass
@@ -1,5 +1,12 @@
 @import _elements/colors
 @import _elements/normalize
+@import _elements/text
+@import _elements/media
 @import _elements/mixins
 @import _partials/header
 @import _partials/home
+@import _partials/featured
+@import _partials/interviews
+@import _partials/news
+@import _partials/ads
+@import _partials/footer
