--- a/css/blog.css
+++ b/css/blog.css
@@ -4,7 +4,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display: block; }
 
-body { line-height: 1; font-family: "Roboto Condensed", Arial, sans-serif; color: #666; }
+body { line-height: 1; font-family: "Roboto Condensed", Arial, sans-serif; color: #898989; }
 
 ol, ul { list-style: none; }
 
@@ -19,6 +19,12 @@ table { border-collapse: collapse; border-spacing: 0; }
 a { color: #495a86; }
 a:hover, a:active, a:active:hover, a:active:focus, a:focus, a:visited { text-decoration: none; }
 
+.interviews h1, .news h1 { font-size: 1.4em; font-weight: 700; text-transform: uppercase; color: #495a86; padding: 15px 0; border-bottom: 1px solid #495a86; margin-bottom: 15px; }
+
+.interviews h1 span, .news h1 span { padding: 10px 8px; border-bottom: 3px solid #495a86; }
+
+.interviews article h2, .news article .content a h2 { color: #495a86; margin: 8px 0; font-weight: 700; font-size: 1.2em; }
+
 header { margin-top: 20px; }
 header .logo { padding-left: 0; padding-top: 10px; padding-right: 20px; }
 header .logo img { width: 90%; }
@@ -26,20 +32,16 @@ header .ad { padding: 0; }
 header .ad a { width: 100%; float: right; max-width: 728px; max-height: 90px; }
 header .ad img { width: 100%; float: right; }
 header nav { margin-top: 20px; border-top: 1px solid #495a86; border-bottom: 3px solid #495a86; }
+@media (max-width: 767px) { header nav { padding: 0 !important; }
+  header nav .container { padding: 0; } }
+header nav .mobile-menu { text-align: center; padding: 10px; color: #fff; cursor: pointer; background-color: #495a86; }
 header nav ul { text-align: center; }
+@media (max-width: 767px) { header nav ul { display: none; } }
 header nav ul li { display: inline-block; text-transform: uppercase; text-align: center; }
+@media (max-width: 767px) { header nav ul li { display: block; } }
 header nav ul li:hover { background-color: #495a86; }
 header nav ul li:hover a { color: #fff; }
 header nav ul li a { width: 100%; height: 100%; padding: 14px 18px; display: block; }
-header .featured { background-color: #f6f6f6; }
-header .featured p { width: 130px; float: left; margin-left: 20px; color: #b1b6c9; text-transform: uppercase; padding: 10px 0; background-image: url("../images/arrow-right.png"); background-repeat: no-repeat; background-position-x: 105px; background-position-y: 10px; }
-header .featured ul { width: 750px; float: left; }
-header .featured ul li { font-size: 0.8em; width: 100%; padding: 10px 0; }
-header .featured ul li a { color: #337ab7; width: 100%; height: 100%; display: block; }
-header .featured .buttons { float: right; }
-header .featured .buttons .prev, header .featured .buttons .next { width: 14px; height: 14px; float: left; cursor: pointer; margin: 0 2px; padding: 14px 0; background-position-y: 10px; background-repeat: no-repeat; }
-header .featured .buttons .prev { background-image: url("../images/arrow-left.png"); }
-header .featured .buttons .next { background-image: url("../images/arrow-right.png"); }
 
 .highlights { margin: 25px 0; height: 300px; background-image: url("../images/bg-highlights.jpg"); }
 .highlights .container { height: 100%; overflow: hidden; }
@@ -55,5 +57,67 @@ header .featured .buttons .next { background-image: url("../images/arrow-right.p
 .highlights .container .slide .buttons .prev, .highlights .container .slide .buttons .next { width: 14px; height: 14px; float: left; cursor: pointer; margin: 0 2px; background-repeat: no-repeat; }
 .highlights .container .slide .buttons .prev { background-image: url("../images/arrow-left.png"); }
 .highlights .container .slide .buttons .next { background-image: url("../images/arrow-right.png"); }
+.highlights .container .search { position: relative; }
+.highlights .container .search input { padding: 12px; width: 100%; border: none; outline: none; background-color: #f6f6f6; }
+.highlights .container .search button { position: absolute; right: 0; top: 0; border: none; padding: 10px 20px; background-color: #b1b6c9; }
+.highlights .container .search button i { font-size: 1.4em; color: #f6f6f6; }
+.highlights .container .facebook-box { margin-top: 12px; padding-right: 0; }
+.highlights .container .facebook-box .fb-page { width: 100%; }
+.highlights .container .facebook-box .fb-page blockquote { text-align: center; margin: 20px; }
+.highlights .container .facebook-box .fb-page span { width: 100% !important; }
+.highlights .container .facebook-box .fb-page span iframe { width: 100% !important; }
+
+.featured { background-color: #f6f6f6; }
+.featured p { width: 130px; float: left; margin-left: 20px; color: #b1b6c9; text-transform: uppercase; padding: 10px 0; background-image: url("../images/arrow-right.png"); background-repeat: no-repeat; background-position-x: 105px; background-position-y: 10px; }
+.featured ul { width: 750px; float: left; }
+@media (max-width: 767px) { .featured ul { max-width: 80%; } }
+.featured ul li { font-size: 0.8em; width: 100%; padding: 10px 0; }
+.featured ul li a { color: #495a86; width: 100%; height: 100%; display: block; }
+.featured .buttons { float: right; }
+.featured .buttons .prev, .featured .buttons .next { width: 14px; height: 14px; float: left; cursor: pointer; margin: 0 2px; padding: 14px 0; background-position-y: 10px; background-repeat: no-repeat; }
+.featured .buttons .prev { background-image: url("../images/arrow-left.png"); }
+.featured .buttons .next { background-image: url("../images/arrow-right.png"); }
+
+.interviews { padding-left: 0; }
+@media (max-width: 767px) { .interviews { padding: 20px 0; } }
+.interviews article img { max-width: 100%; }
+
+@media (max-width: 767px) { .news { padding: 0; } }
+@media (max-width: 767px) { .news .container { padding: 0; } }
+.news article { padding: 0 15px 15px 0; }
+.news article.first { min-height: 380px; }
+@media (max-width: 767px) { .news article.first { min-height: 100%; } }
+.news article .col-xs-12, .news article .col-xs-6, .news article .col-sm-6 { padding: 0; }
+.news article .image { padding: 0; }
+.news article .image p { position: absolute; bottom: 20px; padding: 4px 6px; color: #fff; background-color: #495a86; font-size: 0.7em; }
+.news article .image img { max-width: 100%; }
+.news article .content .small { padding: 5px 0; font-size: 0.6em; color: #b1b6c9; }
+.news article .content .small a { color: #b1b6c9; font-weight: 700; }
+.news article .content a p { color: #898989; }
+
+.ads { padding: 0; }
+.ads .ad { margin: 20px 0; text-align: center; }
+@media (max-width: 767px) { .ads .ad { margin: 0; padding: 0; } }
+.ads .ad img { max-width: 100%; }
+.ads .ad-border { margin: 50px 0; padding: 20px 15px 0 15px; border-top: 1px solid #495a86; }
+@media (max-width: 767px) { .ads .ad-border { margin: 0; padding: 0; border: 0; } }
+
+footer { clear: both; background-color: #495a86; }
+footer .newsletter { background-color: #f6f6f6; color: #495a86; padding: 10px 0; position: relative; }
+footer .newsletter p { text-transform: uppercase; text-align: right; font-weight: 700; margin-top: 15px; margin-right: 40px; }
+@media (max-width: 767px) { footer .newsletter p { text-align: center; margin-right: 0; margin-bottom: 15px; } }
+footer .newsletter input { padding: 12px 115px 12px 12px; width: 100%; border: none; outline: none; color: #b1b6c9; }
+footer .newsletter button { position: absolute; right: 0; top: 0; border: none; padding: 13px 20px; background-color: #b1b6c9; }
+footer .menu img { width: 60px; margin-top: 20px; margin-bottom: 20px; }
+footer .menu ul { margin-top: 30px; text-align: center; }
+@media (max-width: 767px) { footer .menu ul { margin-top: 10px; margin-bottom: 10px; } }
+footer .menu ul li { display: inline-block; padding: 0 10px; cursor: pointer; border-left: 1px solid rgba(255, 255, 255, 0.4); }
+@media (max-width: 767px) { footer .menu ul li { border: none; padding: 7px 5px; } }
+footer .menu ul li:first-child { border: none; }
+footer .menu ul li a { color: #fff; width: 100%; height: 100%; font-size: 0.9em; }
+footer .menu ul li a:hover { color: #b1b6c9; }
+footer .address { padding: 10px 0; background-color: #202658; }
+footer .address p { font-size: 0.8em; color: #fff; text-align: center; }
+footer .address p a { color: #b1b6c9; cursor: pointer; }
 
 /*# sourceMappingURL=blog.css.map */
