--- a/sass/_partials/_home.sass
+++ b/sass/_partials/_home.sass
@@ -80,3 +80,48 @@
         .next
           background:
             image: url("../images/arrow-right.png")
+
+
+    .search
+      position: relative
+
+      input
+        padding: 12px
+        width: 100%
+        border: none
+        outline: none
+        background:
+          color: $color-gray-soft
+
+      button
+        position: absolute
+        right: 0
+        top: 0
+        border: none
+        padding: 10px 20px
+        background:
+          color: $color-gray
+
+        i
+          font:
+            size: 1.4em
+          color: $color-gray-soft
+
+    .facebook-box
+      margin:
+        top: 12px
+      padding:
+        right: 0
+
+      .fb-page
+        width: 100%
+
+        blockquote
+          text-align: center
+          margin: 20px
+
+        span
+          width: 100% !important
+
+          iframe
+            width: 100% !important
