--- a/sass/_partials/_featured.sass
+++ b/sass/_partials/_featured.sass
@@ -18,11 +18,16 @@
       position-y: 10px
 
   ul
-    width: 750px
+    width: 650px
     float: left
+    position: absolute
+    padding-left: 145px
 
     @media #{$xsmall-max}
-      max-width: 80%
+      max-width: 100%
+      text-align: center
+      position: relative
+      padding-left: 0
 
     li
       font:
