--- a/sass/_elements/_normalize.sass
+++ b/sass/_elements/_normalize.sass
@@ -53,6 +53,9 @@ table
   padding: 0
   margin: 0
 
+.container
+  @media #{$small-max}
+    width: inherit
 a
   color: $color-primary
 
@@ -64,5 +67,3 @@ a
   &:visited
     text:
       decoration: none
-
-p
