--- a/sass/_partials/_footer.sass
+++ b/sass/_partials/_footer.sass
@@ -10,6 +10,9 @@ footer
     padding: 10px 0
     position: relative
 
+    @media #{$xsmall-max}
+      padding: 10px 0 20px 0
+
     p
       text:
         transform: uppercase
