--- a/sass/blog.sass
+++ b/sass/blog.sass
@@ -3,10 +3,14 @@
 @import _elements/text
 @import _elements/mixins
 @import _elements/normalize
+@import _elements/common
+@import _partials/search
+@import _partials/facebook
 @import _partials/header
 @import _partials/home
 @import _partials/featured
 @import _partials/interviews
 @import _partials/news
+@import _partials/categories
 @import _partials/ads
 @import _partials/footer
