--- a/css/blog.css
+++ b/css/blog.css
@@ -1,6 +1,6 @@
-.interviews h1, .news h1 { font-size: 1.4em; font-weight: 700; text-transform: uppercase; color: #495a86; padding: 15px 0; border-bottom: 1px solid #495a86; margin-bottom: 15px; }
+.interviews h1, .news h1, .categories h1 { font-size: 1.4em; font-weight: 700; text-transform: uppercase; color: #495a86; padding: 15px 0; border-bottom: 1px solid #495a86; margin-bottom: 15px; }
 
-.interviews h1 span, .news h1 span { padding: 10px 8px; border-bottom: 3px solid #495a86; }
+.interviews h1 span, .news h1 span, .categories h1 span { padding: 10px 8px; border-bottom: 3px solid #495a86; }
 
 .interviews article h2, .news article .content a h2 { color: #495a86; margin: 8px 0; font-weight: 700; font-size: 1.2em; }
 
@@ -26,6 +26,27 @@ table { border-collapse: collapse; border-spacing: 0; }
 
 a { color: #495a86; }
 a:hover, a:active, a:active:hover, a:active:focus, a:focus, a:visited { text-decoration: none; }
+
+.paddingtop { padding-top: 35px; }
+
+.paddingtop-double { padding-top: 70px; }
+
+@media (max-width: 767px) { .mobile-nopaddingtop { padding-top: 0; } }
+
+.paddingbottom { padding-bottom: 35px; }
+
+.paddingbottom-double { padding-bottom: 70px; }
+
+.search { position: relative; }
+.search input { padding: 12px; width: 100%; border: none; outline: none; background-color: #f6f6f6; }
+.search button { position: absolute; right: 0; top: 0; border: none; padding: 10px 20px; background-color: #b1b6c9; }
+.search button i { font-size: 1.4em; color: #f6f6f6; }
+
+.facebook-box { margin-top: 12px; padding-right: 0; }
+.facebook-box .fb-page { width: 100%; }
+.facebook-box .fb-page blockquote { text-align: center; margin: 20px; }
+.facebook-box .fb-page span { width: 100% !important; }
+.facebook-box .fb-page span iframe { width: 100% !important; }
 
 header { margin-top: 20px; }
 @media (max-width: 767px) { header { margin-top: 0; } }
@@ -66,15 +87,6 @@ header nav ul li a { width: 100%; height: 100%; padding: 14px 18px; display: blo
 .highlights .container .slide .buttons .prev, .highlights .container .slide .buttons .next { width: 14px; height: 14px; float: left; cursor: pointer; margin: 0 2px; background-repeat: no-repeat; }
 .highlights .container .slide .buttons .prev { background-image: url("../images/arrow-left.png"); }
 .highlights .container .slide .buttons .next { background-image: url("../images/arrow-right.png"); }
-.highlights .container .search { position: relative; }
-.highlights .container .search input { padding: 12px; width: 100%; border: none; outline: none; background-color: #f6f6f6; }
-.highlights .container .search button { position: absolute; right: 0; top: 0; border: none; padding: 10px 20px; background-color: #b1b6c9; }
-.highlights .container .search button i { font-size: 1.4em; color: #f6f6f6; }
-.highlights .container .facebook-box { margin-top: 12px; padding-right: 0; }
-.highlights .container .facebook-box .fb-page { width: 100%; }
-.highlights .container .facebook-box .fb-page blockquote { text-align: center; margin: 20px; }
-.highlights .container .facebook-box .fb-page span { width: 100% !important; }
-.highlights .container .facebook-box .fb-page span iframe { width: 100% !important; }
 
 .featured { background-color: #f6f6f6; }
 .featured p { width: 130px; float: left; margin-left: 20px; color: #b1b6c9; text-transform: uppercase; padding: 10px 0; background-image: url("../images/arrow-right.png"); background-repeat: no-repeat; background-position-x: 105px; background-position-y: 10px; }
@@ -102,6 +114,15 @@ header nav ul li a { width: 100%; height: 100%; padding: 14px 18px; display: blo
 .news article .content .small { padding: 5px 0; font-size: 0.6em; color: #b1b6c9; }
 .news article .content .small a { color: #b1b6c9; font-weight: 700; }
 .news article .content a p { color: #898989; }
+.news .buttons { margin: 10px 0; padding: 10px 0; border-top: 1px solid #f6f6f6; }
+.news .buttons ul { text-align: center; }
+.news .buttons ul li { padding: 5px 10px; display: inline-block; }
+.news .buttons ul li a i { margin: 0 5px; font-size: 0.8em; }
+.news .buttons ul li a:hover { color: #202658; }
+
+.categories ul { text-align: center; }
+.categories ul li { padding: 5px 10px; display: inline-block; margin: 5px; background-color: #f6f6f6; }
+.categories ul li a { font-size: 0.8em; }
 
 .ads { padding: 0; height: 100%; }
 @media (max-width: 767px) { .ads { width: 100%; } }
@@ -112,10 +133,8 @@ header nav ul li a { width: 100%; height: 100%; padding: 14px 18px; display: blo
 .ads ul li .ad a { display: block; }
 .ads ul li .ad img { max-width: 100%; }
 @media (max-width: 767px) { .ads ul li .ad img { width: 100%; } }
-.ads ul li .ad-border { margin: 50px 0; padding: 20px 15px 0 15px; border-top: 1px solid #495a86; }
+.ads ul li .ad-border { margin: 53px 0; padding: 20px 15px 0 15px; border-top: 1px solid #495a86; }
 @media (max-width: 767px) { .ads ul li .ad-border { margin: 0; padding: 0; border: 0; } }
-
-.paddingtop { padding-top: 35px; }
 
 footer { clear: both; background-color: #495a86; }
 footer .newsletter { background-color: #f6f6f6; color: #495a86; padding: 10px 0; position: relative; }
