--- a/sass/_partials/_news.sass
+++ b/sass/_partials/_news.sass
@@ -57,3 +57,23 @@
 
         p
           color: $color-dark
+
+  .buttons
+    margin: 10px 0
+    padding: 10px 0
+    border-top: 1px solid $color-gray-soft
+
+    ul
+      text-align: center
+
+      li
+        padding: 5px 10px
+        display: inline-block
+
+        a
+          i
+            margin: 0 5px
+            font-size: .8em
+
+          &:hover
+            color: $color-primary-dark
