--- a/sass/_partials/_news.sass
+++ b/sass/_partials/_news.sass
@@ -58,6 +58,10 @@
         p
           color: $color-dark
 
+          &.category
+            font:
+              size: .8em
+            color: $color-gray
   .buttons
     margin: 10px 0
     padding: 10px 0
