--- a/sass/_partials/_categories.sass
+++ b/sass/_partials/_categories.sass
@@ -13,5 +13,9 @@
       background:
         color: $color-gray-soft
 
+      &:hover
+        background:
+          color: $color-gray
+
       a
         font-size: .8em
