--- a/sass/_partials/_news.sass
+++ b/sass/_partials/_news.sass
@@ -10,8 +10,17 @@
       padding: 0
 
   article
-    padding: 0 15px 15px 0
-    
+    padding:
+      top: 5px
+      bottom: 3px
+      right: 5px
+      left: 5px
+    margin:
+      bottom: 15px
+
+    &:hover
+      background-color: $color-gray-soft
+
     &.first
       min-height: 380px
 
@@ -35,6 +44,9 @@
           color: $color-primary
         font:
           size: 0.7em
+
+        @media #{$xsmall-max}
+          display: none
 
       img
         width: 100%
