--- a/css/blog.css
+++ b/css/blog.css
@@ -1,8 +1,8 @@
-.interviews h1, .news h1, .categories h1 { font-size: 1.4em; font-weight: 700; text-transform: uppercase; color: #495a86; padding: 15px 0; border-bottom: 1px solid #495a86; margin-bottom: 15px; }
+.interviews .container .box h1, .news h1, .categories h1 { font-size: 1.4em; font-weight: 700; text-transform: uppercase; color: #495a86; padding: 15px 0; border-bottom: 1px solid #495a86; margin-bottom: 15px; }
 
-.interviews h1 span, .news h1 span, .categories h1 span { padding: 10px 8px; border-bottom: 3px solid #495a86; }
+.interviews .container .box h1 span, .news h1 span, .article h1 span, .categories h1 span { padding: 10px 8px; border-bottom: 3px solid #495a86; }
 
-.interviews article h2, .news article .content a h2 { color: #495a86; margin: 8px 0; font-weight: 700; font-size: 1.2em; }
+.interviews .container .box article h2, .news article .content a h2 { color: #495a86; margin: 8px 0; font-weight: 700; font-size: 1.2em; }
 
 /* http://meyerweb.com/eric/tools/css/reset/ v2.0 | 20110126 License: none (public domain) */
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video { margin: 0; padding: 0; border: 0; font-size: 100%; font: inherit; vertical-align: baseline; }
@@ -40,6 +40,8 @@ a:hover, a:active, a:active:hover, a:active:focus, a:focus, a:visited { text-dec
 .paddingbottom-double { padding-bottom: 70px; }
 
 @media (max-width: 767px) { .mobile-nopaddingbottom { padding-bottom: 0; } }
+
+@media (max-width: 767px) { .nopadding-mobile { padding: 0; } }
 
 .search { position: relative; }
 .search input { padding: 12px; width: 100%; border: none; outline: none; background-color: #f6f6f6; }
@@ -103,29 +105,61 @@ header nav ul li a { width: 100%; height: 100%; padding: 14px 18px; display: blo
 .featured .buttons .prev { background-image: url("../images/arrow-left.png"); }
 .featured .buttons .next { background-image: url("../images/arrow-right.png"); }
 
-.interviews { padding-left: 0; }
-@media (max-width: 767px) { .interviews { padding: 20px 0; } }
-.interviews article img { max-width: 100%; }
+.more { padding: 10px 0; margin: 10px 0; font-size: 0.8em; text-align: right; border-top: 1px solid #b1b6c9; border-bottom: 1px solid #b1b6c9; }
+.more i { font-size: 0.6em; }
 
-@media (max-width: 767px) { .news .nopadding-mobile { padding: 0; } }
+.interviews { padding: 0; }
+@media (max-width: 767px) { .interviews { padding: 20px 0; } }
+.interviews .container { padding: 0; }
+.interviews .container .box { padding: 0; }
+.interviews .container .box article { cursor: pointer; margin: 5px 0; padding-top: 5px; padding-bottom: 3px; }
+.interviews .container .box article:hover { background-color: #f6f6f6; }
+@media (max-width: 767px) { .interviews .container .box article { border-bottom: 1px solid #b1b6c9; padding-bottom: 13px; margin: 0; } }
+.interviews .container .box article img { max-width: 100%; }
+
+@media (max-width: 767px) { .news { padding: 0; } }
 .news article { padding-top: 5px; padding-bottom: 3px; padding-right: 5px; padding-left: 5px; margin-bottom: 15px; }
+@media (max-width: 767px) { .news article { border-bottom: 1px solid #b1b6c9; padding-top: 5px; padding-bottom: 13px; margin: 0; } }
 .news article:hover { background-color: #f6f6f6; }
 .news article.first { min-height: 380px; }
 @media (max-width: 767px) { .news article.first { min-height: 100%; } }
-.news article .col-xs-12, .news article .col-xs-6, .news article .col-sm-6 { padding: 0; }
 .news article .image { padding: 0; }
 .news article .image p { position: absolute; bottom: 20px; padding: 4px 6px; color: #fff; background-color: #495a86; font-size: 0.7em; }
 @media (max-width: 767px) { .news article .image p { display: none; } }
 .news article .image img { width: 100%; }
+.news article .content { padding: 0 5px; }
 .news article .content .small { padding: 5px 0; font-size: 0.6em; color: #b1b6c9; }
 .news article .content .small a { color: #b1b6c9; font-weight: 700; }
 .news article .content a p { color: #898989; }
 .news article .content a p.category { font-size: 0.8em; color: #b1b6c9; }
+.news article .content .resume { padding: 0; }
 .news .buttons { margin: 10px 0; padding: 10px 0; border-top: 1px solid #f6f6f6; }
 .news .buttons ul { text-align: center; }
 .news .buttons ul li { padding: 5px 10px; display: inline-block; }
 .news .buttons ul li a i { margin: 0 5px; font-size: 0.8em; }
 .news .buttons ul li a:hover { color: #202658; }
+
+.article { padding-top: 5px; padding-bottom: 3px; padding-right: 5px; padding-left: 5px; margin-bottom: 15px; margin-top: 35px; }
+.article .category { color: #b1b6c9; text-align: center; margin: 10px 0; display: block; text-transform: uppercase; }
+.article h1 { text-align: center; color: #495a86; font-size: 2em; font-weight: 700; }
+.article .image { padding: 0; margin-bottom: 25px; }
+.article .image p { position: absolute; bottom: 40px; padding: 8px 12px; color: #fff; background-color: #495a86; font-size: 1.2em; font-weight: 700; }
+@media (max-width: 767px) { .article .image p { display: none; } }
+.article .image img { width: 100%; }
+.article .small { padding: 0; margin: 15px 0; text-align: center; font-size: 0.8em; color: #b1b6c9; }
+.article .small a { color: #b1b6c9; font-weight: 700; }
+.article .content { padding: 0 10px; line-height: 1.6em; }
+.article .content blockquote { margin: 30px auto; text-align: center; font-size: 1.4em; width: 80%; font-style: italic; color: #495a86; }
+.article .content blockquote.left { padding-left: 20px; margin-right: 30px; border-left: 1px solid #495a86; width: 40%; float: left; }
+.article .content blockquote.right { padding-right: 20px; margin-left: 30px; border-right: 1px solid #495a86; width: 40%; float: right; }
+.article .content p { color: #898989; margin: 20px 0; }
+.article .content ul { padding-left: 60px; }
+.article .content ul li { list-style: square; }
+.article .buttons { margin: 10px 0; padding: 10px 0; border-top: 1px solid #f6f6f6; }
+.article .buttons ul { text-align: center; }
+.article .buttons ul li { padding: 5px 10px; display: inline-block; }
+.article .buttons ul li a i { margin: 0 5px; font-size: 0.8em; }
+.article .buttons ul li a:hover { color: #202658; }
 
 .categories ul li { padding: 5px 10px; display: inline-block; margin: 5px; background-color: #f6f6f6; }
 .categories ul li:hover { background-color: #b1b6c9; }
