--- a/sass/_partials/_interviews.sass
+++ b/sass/_partials/_interviews.sass
@@ -1,19 +1,41 @@
 .interviews
-  padding:
-    left: 0
+  padding: 0
 
   @media #{$xsmall-max}
     padding: 20px 0
 
-  h1
-    @extend %h1
+  .container
+    padding: 0
 
-    span
-      @extend %h1-span
+    .box
+      padding: 0
 
-  article
-    img
-      max-width: 100%
+      h1
+        @extend %h1
 
-    h2
-      @extend %h2
+        span
+          @extend %h1-span
+
+      article
+        cursor: pointer
+        margin: 5px 0
+        padding:
+          top: 5px
+          bottom: 3px
+
+        &:hover
+          background:
+            color: $color-gray-soft
+
+        @media #{$xsmall-max}
+          border:
+            bottom: 1px solid $color-gray
+          padding:
+            bottom: 13px
+          margin: 0
+
+        img
+          max-width: 100%
+
+        h2
+          @extend %h2
