--- a/sass/blog.sass
+++ b/sass/blog.sass
@@ -9,8 +9,10 @@
 @import _partials/header
 @import _partials/home
 @import _partials/featured
+@import _partials/more
 @import _partials/interviews
 @import _partials/news
+@import _partials/articles
 @import _partials/categories
 @import _partials/ads
 @import _partials/footer
