--- a/sass/_partials/_articles.sass
+++ b/sass/_partials/_articles.sass
@@ -61,48 +61,74 @@
         weight: 700
 
   .content
-    padding: 0 10px
+    padding:
+      right: 10px
+      left: 0
     line-height: 1.6em
+    position: relative
 
-    blockquote
-      margin: 30px auto
-      text-align: center
-      font:
-        size: 1.4em
-      width: 80%
-      font:
-        style: italic
-      color: $color-primary
-
-      &.left
-        padding:
-          left: 20px
-        margin:
-          right: 30px
-        border:
-          left: 1px solid $color-primary
-        width: 40%
-        float: left
-
-      &.right
-        padding:
-          right: 20px
-        margin:
-          left: 30px
-        border:
-          right: 1px solid $color-primary
-        width: 40%
-        float: right
-
-    p
-      color: $color-dark
-      margin: 20px 0
-
-    ul
-      padding-left: 60px
+    ul.share
+      width: 30px
+      position: absolute
+      margin:
+        top: 20px
 
       li
-        list-style: square
+        margin: 4px 0
+        padding: 2px 5px
+        text-align: center
+        background:
+          color: $color-primary
+
+        a
+          color: $color-soft
+
+          i
+            font-size: .8em
+
+    .text
+      padding:
+        left: 45px
+
+      blockquote
+        margin: 30px auto
+        text-align: center
+        font:
+          size: 1.4em
+        width: 80%
+        font:
+          style: italic
+        color: $color-primary
+
+        &.left
+          padding:
+            left: 20px
+          margin:
+            right: 30px
+          border:
+            left: 1px solid $color-primary
+          width: 40%
+          float: left
+
+        &.right
+          padding:
+            right: 20px
+          margin:
+            left: 30px
+          border:
+            right: 1px solid $color-primary
+          width: 40%
+          float: right
+
+      p
+        color: $color-dark
+        margin: 20px 0
+
+      ul
+        padding-left: 60px
+
+        li
+          list-style: square
 
   .buttons
     margin: 10px 0
