--- a/sass/_partials/_more.sass
+++ b/sass/_partials/_more.sass
@@ -8,6 +8,10 @@
     top: 1px solid $color-gray
     bottom: 1px solid $color-gray
 
+  @media #{$xsmall-max}
+
+
   i
-    font:
-      size: .6em
+    margin:
+      left: 5px
+      right: 10px
