--- a/css/blog.css
+++ b/css/blog.css
@@ -106,7 +106,7 @@ header nav ul li a { width: 100%; height: 100%; padding: 14px 18px; display: blo
 .featured .buttons .next { background-image: url("../images/arrow-right.png"); }
 
 .more { padding: 10px 0; margin: 10px 0; font-size: 0.8em; text-align: right; border-top: 1px solid #b1b6c9; border-bottom: 1px solid #b1b6c9; }
-.more i { font-size: 0.6em; }
+.more i { margin-left: 5px; margin-right: 10px; }
 
 .interviews { padding: 0; }
 @media (max-width: 767px) { .interviews { padding: 20px 0; } }
@@ -148,13 +148,18 @@ header nav ul li a { width: 100%; height: 100%; padding: 14px 18px; display: blo
 .article .image img { width: 100%; }
 .article .small { padding: 0; margin: 15px 0; text-align: center; font-size: 0.8em; color: #b1b6c9; }
 .article .small a { color: #b1b6c9; font-weight: 700; }
-.article .content { padding: 0 10px; line-height: 1.6em; }
-.article .content blockquote { margin: 30px auto; text-align: center; font-size: 1.4em; width: 80%; font-style: italic; color: #495a86; }
-.article .content blockquote.left { padding-left: 20px; margin-right: 30px; border-left: 1px solid #495a86; width: 40%; float: left; }
-.article .content blockquote.right { padding-right: 20px; margin-left: 30px; border-right: 1px solid #495a86; width: 40%; float: right; }
-.article .content p { color: #898989; margin: 20px 0; }
-.article .content ul { padding-left: 60px; }
-.article .content ul li { list-style: square; }
+.article .content { padding-right: 10px; padding-left: 0; line-height: 1.6em; position: relative; }
+.article .content ul.share { width: 30px; position: absolute; margin-top: 20px; }
+.article .content ul.share li { margin: 4px 0; padding: 2px 5px; text-align: center; background-color: #495a86; }
+.article .content ul.share li a { color: #fff; }
+.article .content ul.share li a i { font-size: 0.8em; }
+.article .content .text { padding-left: 45px; }
+.article .content .text blockquote { margin: 30px auto; text-align: center; font-size: 1.4em; width: 80%; font-style: italic; color: #495a86; }
+.article .content .text blockquote.left { padding-left: 20px; margin-right: 30px; border-left: 1px solid #495a86; width: 40%; float: left; }
+.article .content .text blockquote.right { padding-right: 20px; margin-left: 30px; border-right: 1px solid #495a86; width: 40%; float: right; }
+.article .content .text p { color: #898989; margin: 20px 0; }
+.article .content .text ul { padding-left: 60px; }
+.article .content .text ul li { list-style: square; }
 .article .buttons { margin: 10px 0; padding: 10px 0; border-top: 1px solid #f6f6f6; }
 .article .buttons ul { text-align: center; }
 .article .buttons ul li { padding: 5px 10px; display: inline-block; }
