--- a/css/blog.css
+++ b/css/blog.css
@@ -149,16 +149,24 @@ header nav ul li a { width: 100%; height: 100%; padding: 14px 18px; display: blo
 .article .small { padding: 0; margin: 15px 0; text-align: center; font-size: 0.8em; color: #b1b6c9; }
 .article .small a { color: #b1b6c9; font-weight: 700; }
 .article .content { padding-right: 10px; padding-left: 0; line-height: 1.6em; position: relative; }
-.article .content ul.share { width: 30px; position: absolute; margin-top: 20px; }
-.article .content ul.share li { margin: 4px 0; padding: 2px 5px; text-align: center; background-color: #495a86; }
+@media (max-width: 767px) { .article .content { padding-right: 0; } }
+.article .content ul.share { width: 40px; position: absolute; text-align: center; margin-top: 20px; }
+@media (max-width: 767px) { .article .content ul.share { width: 100%; position: relative; margin: 0; } }
+.article .content ul.share li { margin: 5px 0; padding: 5px; background-color: #495a86; }
+@media (max-width: 767px) { .article .content ul.share li { display: inline-block; margin: 5px; padding: 5px 10px; } }
 .article .content ul.share li a { color: #fff; }
 .article .content ul.share li a i { font-size: 0.8em; }
-.article .content .text { padding-left: 45px; }
+.article .content .text { padding-left: 55px; clear: both; }
+@media (max-width: 767px) { .article .content .text { padding-left: 0; } }
 .article .content .text blockquote { margin: 30px auto; text-align: center; font-size: 1.4em; width: 80%; font-style: italic; color: #495a86; }
+@media (max-width: 767px) { .article .content .text blockquote { font-size: 1em; } }
 .article .content .text blockquote.left { padding-left: 20px; margin-right: 30px; border-left: 1px solid #495a86; width: 40%; float: left; }
+@media (max-width: 767px) { .article .content .text blockquote.left { padding-left: 10px; margin-right: 10px; } }
 .article .content .text blockquote.right { padding-right: 20px; margin-left: 30px; border-right: 1px solid #495a86; width: 40%; float: right; }
+@media (max-width: 767px) { .article .content .text blockquote.right { padding-right: 10px; margin-left: 10px; } }
 .article .content .text p { color: #898989; margin: 20px 0; }
 .article .content .text ul { padding-left: 60px; }
+@media (max-width: 767px) { .article .content .text ul { padding-left: 20px; } }
 .article .content .text ul li { list-style: square; }
 .article .buttons { margin: 10px 0; padding: 10px 0; border-top: 1px solid #f6f6f6; }
 .article .buttons ul { text-align: center; }
