--- a/sass/_partials/_articles.sass
+++ b/sass/_partials/_articles.sass
@@ -67,18 +67,32 @@
     line-height: 1.6em
     position: relative
 
+    @media #{$xsmall-max}
+      padding:
+        right: 0
+
     ul.share
-      width: 30px
+      width: 40px
       position: absolute
+      text-align: center
       margin:
         top: 20px
 
+      @media #{$xsmall-max}
+        width: 100%
+        position: relative
+        margin: 0
+
       li
-        margin: 4px 0
-        padding: 2px 5px
-        text-align: center
+        margin: 5px 0
+        padding: 5px
         background:
           color: $color-primary
+
+        @media #{$xsmall-max}
+          display: inline-block
+          margin: 5px
+          padding: 5px 10px
 
         a
           color: $color-soft
@@ -88,7 +102,12 @@
 
     .text
       padding:
-        left: 45px
+        left: 55px
+      clear: both
+
+      @media #{$xsmall-max}
+        padding:
+          left: 0
 
       blockquote
         margin: 30px auto
@@ -100,6 +119,10 @@
           style: italic
         color: $color-primary
 
+        @media #{$xsmall-max}
+          font:
+            size: 1em
+
         &.left
           padding:
             left: 20px
@@ -109,6 +132,12 @@
             left: 1px solid $color-primary
           width: 40%
           float: left
+
+          @media #{$xsmall-max}
+            padding:
+              left: 10px
+            margin:
+              right: 10px
 
         &.right
           padding:
@@ -120,12 +149,23 @@
           width: 40%
           float: right
 
+          @media #{$xsmall-max}
+            padding:
+              right: 10px
+            margin:
+              left: 10px
+
       p
         color: $color-dark
         margin: 20px 0
 
       ul
-        padding-left: 60px
+        padding:
+          left: 60px
+
+        @media #{$xsmall-max}
+          padding:
+            left: 20px
 
         li
           list-style: square
