--- a/sass/_elements/_normalize.sass
+++ b/sass/_elements/_normalize.sass
@@ -54,8 +54,12 @@ table
   margin: 0
 
 .container
+  padding: 0
+
   @media #{$small-max}
     width: inherit
+    padding: 0 15px
+
 a
   color: $color-primary
 
