--- a/sass/_partials/_more.sass
+++ b/sass/_partials/_more.sass
@@ -9,7 +9,12 @@
     bottom: 1px solid $color-gray
 
   @media #{$xsmall-max}
-
+    font:
+      size: 1em
+    margin:
+      top: 0
+    border:
+      top: 0
 
   i
     margin:
