--- a/sass/blog.sass
+++ b/sass/blog.sass
@@ -10,6 +10,7 @@
 @import _partials/home
 @import _partials/featured
 @import _partials/more
+@import _partials/author
 @import _partials/interviews
 @import _partials/news
 @import _partials/articles
