--- a/css/blog.css
+++ b/css/blog.css
@@ -22,7 +22,8 @@ table { border-collapse: collapse; border-spacing: 0; }
 
 .container-fluid { padding: 0; margin: 0; }
 
-@media (max-width: 970px) { .container { width: inherit; } }
+.container { padding: 0; }
+@media (max-width: 970px) { .container { width: inherit; padding: 0 15px; } }
 
 a { color: #495a86; }
 a:hover, a:active, a:active:hover, a:active:focus, a:focus, a:visited { text-decoration: none; }
@@ -31,7 +32,7 @@ a:hover, a:active, a:active:hover, a:active:focus, a:focus, a:visited { text-dec
 @media (max-width: 767px) { .paddingtop { padding-top: 15px; } }
 
 .paddingtop-double { padding-top: 70px; }
-@media (max-width: 767px) { .paddingtop-double { padding-top: 35px; } }
+@media (max-width: 767px) { .paddingtop-double { padding-top: 15px; } }
 
 @media (max-width: 767px) { .mobile-nopaddingtop { padding-top: 0; } }
 
@@ -94,7 +95,7 @@ header nav ul li a { width: 100%; height: 100%; padding: 14px 18px; display: blo
 .highlights .container .slide .buttons .prev { background-image: url("../images/arrow-left.png"); }
 .highlights .container .slide .buttons .next { background-image: url("../images/arrow-right.png"); }
 
-.featured { background-color: #f6f6f6; }
+.featured { min-height: 35px; background-color: #f6f6f6; }
 .featured p { width: 130px; float: left; margin-left: 20px; color: #b1b6c9; text-transform: uppercase; padding: 10px 0; background-image: url("../images/arrow-right.png"); background-repeat: no-repeat; background-position-x: 105px; background-position-y: 10px; }
 .featured ul { width: 650px; float: left; position: absolute; padding-left: 145px; }
 @media (max-width: 767px) { .featured ul { max-width: 100%; text-align: center; position: relative; padding-left: 0; } }
@@ -106,10 +107,18 @@ header nav ul li a { width: 100%; height: 100%; padding: 14px 18px; display: blo
 .featured .buttons .next { background-image: url("../images/arrow-right.png"); }
 
 .more { padding: 10px 0; margin: 10px 0; font-size: 0.8em; text-align: right; border-top: 1px solid #b1b6c9; border-bottom: 1px solid #b1b6c9; }
+@media (max-width: 767px) { .more { font-size: 1em; margin-top: 0; border-top: 0; } }
 .more i { margin-left: 5px; margin-right: 10px; }
 
+.author { padding: 10px 10px 10px 10px; position: relative; background-color: #f6f6f6; }
+.author .image { margin-top: 10px; }
+.author h2 { color: #495a86; margin: 10px 0; font-weight: 700; }
+.author p { font-size: 0.8em; line-height: 1.4em; padding-right: 20px; }
+.author ul { position: absolute; right: 0; top: 0; }
+.author ul li { text-align: center; padding: 5px; margin: 3px 0; background-color: #b1b6c9; }
+
 .interviews { padding: 0; }
-@media (max-width: 767px) { .interviews { padding: 20px 0; } }
+@media (max-width: 767px) { .interviews { padding: 0 15px; } }
 .interviews .container { padding: 0; }
 .interviews .container .box { padding: 0; }
 .interviews .container .box article { cursor: pointer; margin: 5px 0; padding-top: 5px; padding-bottom: 3px; }
@@ -121,9 +130,10 @@ header nav ul li a { width: 100%; height: 100%; padding: 14px 18px; display: blo
 .news article { padding-top: 5px; padding-bottom: 3px; padding-right: 5px; padding-left: 5px; margin-bottom: 15px; }
 @media (max-width: 767px) { .news article { border-bottom: 1px solid #b1b6c9; padding-top: 5px; padding-bottom: 13px; margin: 0; } }
 .news article:hover { background-color: #f6f6f6; }
-.news article.first { min-height: 380px; }
+.news article.first { min-height: 420px; }
 @media (max-width: 767px) { .news article.first { min-height: 100%; } }
 .news article .image { padding: 0; }
+@media (max-width: 767px) { .news article .image { padding-top: 10px; } }
 .news article .image p { position: absolute; bottom: 20px; padding: 4px 6px; color: #fff; background-color: #495a86; font-size: 0.7em; }
 @media (max-width: 767px) { .news article .image p { display: none; } }
 .news article .image img { width: 100%; }
@@ -140,6 +150,7 @@ header nav ul li a { width: 100%; height: 100%; padding: 14px 18px; display: blo
 .news .buttons ul li a:hover { color: #202658; }
 
 .article { padding-top: 5px; padding-bottom: 3px; padding-right: 5px; padding-left: 5px; margin-bottom: 15px; margin-top: 35px; }
+@media (max-width: 767px) { .article { margin-top: 0; } }
 .article .category { color: #b1b6c9; text-align: center; margin: 10px 0; display: block; text-transform: uppercase; }
 .article h1 { text-align: center; color: #495a86; font-size: 2em; font-weight: 700; }
 .article .image { padding: 0; margin-bottom: 25px; }
@@ -170,9 +181,11 @@ header nav ul li a { width: 100%; height: 100%; padding: 14px 18px; display: blo
 .article .content .text ul li { list-style: square; }
 .article .buttons { margin: 10px 0; padding: 10px 0; border-top: 1px solid #f6f6f6; }
 .article .buttons ul { text-align: center; }
-.article .buttons ul li { padding: 5px 10px; display: inline-block; }
-.article .buttons ul li a i { margin: 0 5px; font-size: 0.8em; }
+.article .buttons ul li { padding: 5px 10px; display: inline-block; width: 49%; vertical-align: middle; }
+@media (max-width: 767px) { .article .buttons ul li { padding: 0; } }
+.article .buttons ul li a i { margin: 0 5px; font-size: 1.8em; width: 15px; }
 .article .buttons ul li a:hover { color: #202658; }
+.article .buttons ul li a p { width: 85%; }
 
 .categories ul li { padding: 5px 10px; display: inline-block; margin: 5px; background-color: #f6f6f6; }
 .categories ul li:hover { background-color: #b1b6c9; }
@@ -187,8 +200,13 @@ header nav ul li a { width: 100%; height: 100%; padding: 14px 18px; display: blo
 .ads ul li .ad a { display: block; }
 .ads ul li .ad img { max-width: 100%; }
 @media (max-width: 767px) { .ads ul li .ad img { width: 100%; } }
-.ads ul li .ad-border { margin: 53px 0; padding: 20px 15px 0 15px; border-top: 1px solid #495a86; }
+.ads ul li.ad-current { width: 100%; min-height: 100px; }
+.ads ul li.ad-current a { width: 100%; display: block; }
+.ads ul li.ad-current a img { width: 100%; }
+.ads ul li .ad-border { margin: 52px 0; padding-top: 20px; border-top: 1px solid #495a86; }
 @media (max-width: 767px) { .ads ul li .ad-border { margin: 0; padding: 0; border: 0; } }
+
+.ads-double li.ad-current { min-height: 200px !important; }
 
 footer { clear: both; background-color: #495a86; }
 footer .newsletter { background-color: #f6f6f6; color: #495a86; padding: 10px 0; position: relative; }
