--- a/sass/_partials/_news.sass
+++ b/sass/_partials/_news.sass
@@ -29,13 +29,17 @@
       background-color: $color-gray-soft
 
     &.first
-      min-height: 380px
+      min-height: 420px
 
       @media #{$xsmall-max}
         min-height: 100%
 
     .image
       padding: 0
+
+      @media #{$xsmall-max}
+        padding:
+          top: 10px
 
       p
         position: absolute
